#67 fixed variant move jumping to next line after hover

--- a/src/Components/ComponentStyles/MoveList.css
+++ b/src/Components/ComponentStyles/MoveList.css
@@ -77,6 +77,16 @@
     align-items: center;
 }
 
+.VariantMove::after{
+    content: '';
+    display: inline-block;
+    width: 4px;
+}
+
+.VariantMove:hover::after{
+    width: 0px;
+}
+
 .VariantMoveNumber{
     margin-left: 5px;
 }
